Fix button text alignment

--- a/src/app/layout/navigation-bar/navigation-bar.component.scss
+++ b/src/app/layout/navigation-bar/navigation-bar.component.scss
@@ -43,7 +43,7 @@
             width: 200px;
             margin-right: 1.2rem;
 
-            display: flex;
+            display: grid;
             justify-content: center;
             align-items: center;
             cursor: pointer;
